--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
     <!-- BOOTSTRAP CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/index.css" />
 </head>
 
 <body>
@@ -28,8 +28,12 @@
             <div class="col-5 vglasses__right p-0">
                 <div class="vglasses__card">
                     <div class="mb-2 text-right mt-2 mr-2">
-                        <button class="btn btn-warning" onclick="removeGlasses(false)">Before</button>
-                        <button class="btn btn-warning" onclick="removeGlasses(true)">After</button>
+                        <button class="btn btn-warning" onclick="removeGlasses(false)">
+								Before
+							</button>
+                        <button class="btn btn-warning" onclick="removeGlasses(true)">
+								After
+							</button>
                     </div>
                     <div class="vglasses__model" id="avatar"></div>
                     <div class="vglasses__info" id="glassesInfo"></div>
@@ -38,7 +42,6 @@
         </div>
     </div>
 
-
     <!-- JQUERY JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
@@ -46,9 +49,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
     <!-- MAIN JS -->
-    <!-- <script src="./js/glasses.js"></script> -->
-    <!-- <script type="module" src="./js/main.js"></script> -->
-    <script type="module" src="./js/test.js"></script>
+
+    <!-- <script src="./js/Glasses.js"></script>
+    <script src="./js/GlassesList.js"></script>
+    <script src="./js/main.js"></script> -->
+    <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
